--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Amazeriffic</h1>
 <nav>
 <a href="#">Регистрация</a>|
-<a href="#">ВиО</a>|
+<a href="faq.html">ВиО</a>|
 <a href="#">Техподдержка</a>
 </nav>
 </header>
@@ -24,7 +24,24 @@ incididunt  ut  labore  et  dolore  magna  aliqua.</p>
 </ul>
 <img  src="lightbulb.png"  alt="Изображение  лампочки">
 </main>
-<footer>
+<footer><div  class="contact">
+<h5>Свяжитесь  с  нами</h5>
+<p>Amazeriffic!</p>
+<p>555  50-я  улица</p>
+<p>Татарстан,  Казань  28801</p>
+</div>
+<div  class="sitemap">
+<h5>Карта  сайта</h5>
+<ul>
+<li><a  href="index.html">Домой</a></li>
+<li><a  href="#">О  нас</a></li>
+<li><a  href="#">Право</a></li>
+<li><a  href="#">Техподдержка</a></li>
+<li><a  href="faq.html">ВиО</a></li>
+<li><a  href="#">Вакансии</a></li>
+</ul>
+</div>
+</footer>
 </footer>
 </body>
 </html>
