--- a/faq.html
+++ b/faq.html
@@ -2,38 +2,57 @@
 <html>
 		<head>
 			<title>Amazeriffic</title>
+			<link rel="stylesheet" type="text/css" href="reset.css">
+			<link rel="stylesheet" type="text/css" href="style.css">
+			<link href="http://fonts.googleapis.com/css?family=Ubuntu&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+			<link href="http://fonts.googleapis.com/css?family=Droid+Sans&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 		</head>
 	<body>
 		<header>
-			<h1>Amazeriffic</h1>
+			<div class="container">
+				<h1>Amazeriffic</h1>
 				<nav>
-					<a href="index.html">Домой</a>
-					<a href="#">Регистрация</a>
+					<a href="index.html">Домой</a>|
+					<a href="#">Регистрация</a>|
 					<a href="#">Техподдержка</a>
 				</nav>
+			</div>
 		</header>
-		<main>
-			<h2>Amazeriffic  изменит  вашу  жизнь!</h2>
-				<p>Lorem  ipsum  dolor  sit  amet,  consectetur  adipisicing  elit,  sed  do  eiusmod  tempor 
-				incididunt  ut  labore  et  dolore  magna  aliqua.</p>
+		<main style= "padding-bottom: 260px;">
+			<div class="container">
+					<div class="main-text">
+						<h2>Вопросы и ответы</h2>
+						<h2>Amazeriffic  изменит  вашу  жизнь!</h2>
+						<p>Lorem  ipsum  dolor  sit  amet,  consectetur  adipisicing  elit,  sed  do  eiusmod  tempor 
+						incididunt  ut  labore  et  dolore  magna  aliqua.</p>
+						<h3>Почему  вам  нужен  Amazeriffic?</h3>
+						<ul>
+						<li>Он  легко  впишется  в  вашу  жизнь</li>
+						<li>Он  классный</li>
+						<li>Он  перевернет  ваш  мир</li>
+						</ul>
+					</div>
+			</div>
 		</main>
 		<footer>
-			<div class="contact">
-				<h5>Свяжитесь с нами</h5>
-				<p>Amazeriffic!</p>
-				<p>555 50-я улица</p>
-				<p>Татарстан, Казань 28801</p>
-			</div>
-			<div class="sitemap">
-				<h5>Карта сайта</h5>
-				<ul>
-					<li><a href="index.html">Домой</a></li>
-					<li><a href="#">О нас</a></li>
-					<li><a href="#">Право</a></li>
-					<li><a href="#">Техподдержка</a></li>
-					<li><a href="faq.html">ВиО</a></li>
-					<li><a href="#">Вакансии</a></li>
-				</ul>
+			<div class="container">
+				<div  class="contact-info">
+					<h5>Свяжитесь с нами</h5>
+					<p>Amazeriffic!</p>
+					<p>555 50-я улица</p>
+					<p>Татарстан, Казань 28801</p>
+				</div>
+				<div class="sitemap">
+					<h5>Карта сайта</h5>
+					<ul>
+						<li><a href="index.html">Домой</a></li>
+						<li><a href="#">О нас</a></li>
+						<li><a href="#">Право</a></li>
+						<li><a href="#">Техподдержка</a></li>
+						<li><a href="faq.html">ВиО</a></li>
+						<li><a href="#">Вакансии</a></li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
